# backpacker

./: .gitignore  README.md  justfile  pyproject.toml
backpacker/: main.py
