[project]
name = "backpacker"
version = "0.1.0"
description = ""
authors = [
    {name = "robertpikmets",email = "robertpikmets@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "ruff (>=0.11.5,<0.12.0)",
    "dash (>=3.0.3,<4.0.0)",
    "dash-leaflet (>=1.1.1,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
